# low-end-engine-project-manager

./: LICENSE  README.md  project_manager.py
game/: CMakeLists.txt
game/src/: main.cpp
game_lib/: CMakeLists.txt
game_lib/private/: MyGameInstance.cpp
game_lib/public/: MyGameInstance.h
game_lib/src/: GameInputEventIds.hpp  MyGameInstance.cpp  MyGameInstance.h
game_lib/src/node/: MyCharacterNode.cpp  MyCharacterNode.h
game_tests/: CMakeLists.txt
game_tests/src/: main.cpp
